crates/toon-schema/tests/compile_fail/custom_range_on_non_vec.stderr
error: custom ranges (min/max) are only valid for Vec<T> fields
       help: field 'name' has type TokenStream [Punct { ch: '#', spacing: Alone, span: #0 bytes(259..260) }, Group { delimiter: Bracket, stream: TokenStream [Ident { ident: "toon_schema", span: #0 bytes(261..272) }, Group { delimiter: Parenthesis, stream: TokenStream [Ident { ident: "min", span: #0 bytes(273..276) }, Punct { ch: '=', spacing: Alone, span: #0 bytes(277..278) }, Literal { kind: Integer, symbol: "1", suffix: None, span: #0 bytes(279..280) }], span: #0 bytes(272..281) }], span: #0 bytes(260..282) }, Ident { ident: "name", span: #0 bytes(287..291) }, Punct { ch: ':', spacing: Alone, span: #0 bytes(291..292) }, Ident { ident: "String", span: #0 bytes(293..299) }, Punct { ch: '.', spacing: Alone, span: #7 bytes(76..86) }, Ident { ident: "ty", span: #7 bytes(76..86) }]
       hint: remove min/max attributes or change type to Vec<T>
 --> tests/compile_fail/custom_range_on_non_vec.rs:9:5
  |
9 |     name: String,
  |     ^^^^
